# UXsimpp

./: .gitignore  BUILD.jp.md  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  instructions_for_developers.md  pyproject.toml
.github/workflows/: build_wheels.yml  test_cpp_codes.yml  test_functions.yml  verify_models.yml
demos_and_examples/: demo01_basic.ipynb  example00_simple.py  example01_basic.py  example02_gridnetwork.py
docs/: Makefile  README.md  combile.bat  index.html  objects.inv  searchindex.js  tech_ref.html  uxsimpp.html
docs/_autosummary/: uxsimpp.trafficppy.Link.html  uxsimpp.trafficppy.Node.html  uxsimpp.trafficppy.World.html
docs/_modules/uxsimpp/: uxsimpp.html
docs/_sources/: index.rst.txt  tech_ref.rst.txt
docs/_sources/_autosummary/: uxsimpp.Node.rst.txt
docs/source/: conf.py  index.rst  tech_ref.rst
docs/source/_autosummary/: uxsimpp.Link.rst  uxsimpp.trafficppy.Link.rst  uxsimpp.trafficppy.Node.rst  uxsimpp.trafficppy.World.rst
tests/: test_01_simple.cpp  test_02_routechoice.cpp  test_03_gridnetwork.cpp  test_03_gridnetwork_bench.cpp  test_04_gridnetwork_bench_heavier.cpp  test_05_signal.cpp  test_06_gridnetwork_bench_heaviest.cpp  test_for_build.py  test_functions.py  test_verification.py
uxsimpp/: README.md  __init__.py  analyzer.py  utils.py  uxsimpp.py
uxsimpp/trafficpp/: README.md  bindings.cpp  traffi.cpp  traffi.h  utils.h
