[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11",
#  "cmake>=3.15",
#  "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "uxsimpp"
#version = "0.1.0"
dynamic = ["version"]
requires-python = ">=3.9"
authors = [{ name = "Toru Seo", email = "seo.t.aa@m.titech.ac.jp" }]
description = "UXsim++: Fast and simple traffic simulator for Python"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21.5",
    "matplotlib>=3.5.2",
    "pillow>=9.2.0",
    "tqdm>=4.64.1",
    "scipy>=1.9.1",
    "pandas>=1.4.4",
]

[tool.scikit-build]
wheel.packages = ["uxsimpp"]
cmake.version = ">=3.15"
#ninja.version = ">=1.10"
build.targets = ["trafficppy"]
build.verbose = true
install.strip = false
install.components = ["python"]
sdist.include = ["uxsimpp/trafficpp/*.cpp", "uxsimpp/trafficpp/*.h"]
#wheel.exclude = ["**/*.cpp", "**/*.h"]
wheel.license-files = ["LICENSE"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "uxsimpp/__init__.py"

